<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android IP Messaging Demo</string>
    <string name="client_name">Client Name</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="invite_participant">Invite Participant</string>
    <string name="incoming_call_message">You got a Channel Invite. Join it?</string>
    <string name="join">Join</string>
    <string name="decline">Decline</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="conversation">Conversation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_channel">ChannelActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_update_friendly_name">Enter a friendly name</string>
    <string name="title_update_topic">Enter a topic</string>
    <string name="title_add_channel_name">Enter a channel name</string>
    <string name="title_invite_member">Invite member</string>
    <string name="title_add_member">Add member</string>
    <string name="title_remove_member">Remove member</string>
    <string name="type_message">Type message</string>
    <string name="OK">OK</string>
     <string name="Options">Options</string>
    <string name="Create_public_channel">Create public channel</string>
    <string name="Create_private_channel">Create private channel</string>
    

</resources>