<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/loginUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/client_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/client_name"
                android:singleLine="true"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:hint="@string/client_name"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:text="Channel Name" />

        <Button
            android:id="@+id/register"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/createChannel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Channel Name"
                android:singleLine="true" />

            <Button
                android:id="@+id/plus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="Create Channel" />
        </LinearLayout>

        <Button
            android:id="@+id/logout"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/logout" />
    </LinearLayout>

</LinearLayout>